--- a/_includes/head.html
+++ b/_includes/head.html
@@ -149,7 +149,7 @@
     {% endfor %}
   {% endif %}
 
-  <link rel="icon" href="https://raw.githubusercontent.com/canozal/canozal.github.io/main/assets/favicon.ico" sizes="any">
-  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/canozal/canozal.github.io/main/assets/apple-touch-icon.png">
+  <link rel="icon" href="https://raw.githubusercontent.com/canozal/urlscam-website/main/assets/favicon.ico" sizes="any">
+  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/canozal/urlscam-website/main/assets/apple-touch-icon.png">
 
 </head>
